<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/min_width_dialog"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <EditText
        android:id="@+id/text_view_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/movie_name"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <RadioGroup
        android:id="@+id/radio_group_method_of_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_padding">

        <RadioButton
            android:id="@+id/radio_sort_by_popularity"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="?android:attr/textColorPrimary"
            android:checked="true"
            android:text="@string/sort_by_popularity" />

        <RadioButton
            android:id="@+id/radio_sort_by_rating"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/sort_by_rating" />
    </RadioGroup>

</LinearLayout>