<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".activities.MovieDetailActivity">

    <ImageView
        android:id="@+id/imageViewPoster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/poster"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="50dp"
            android:paddingEnd="8dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/textViewLabelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:textAlignment="gravity"
                android:text="@string/label_title"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:singleLine="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toTopOf="@+id/textViewLabelTitle"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textViewLabelOriginalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:layout_marginTop="8dp"
                android:text="@string/original_title"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewOriginalTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toTopOf="@+id/textViewLabelOriginalTitle"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textViewLabelRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toTopOf="@+id/textViewLabelRating"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textViewLabelReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toTopOf="@+id/textViewLabelReleaseDate"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textViewLabelDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="gravity"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription"
                app:layout_constraintEnd_toEndOf="parent" />

            <include
                android:id="@+id/cardViewOnlineStream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                layout="@layout/item_online_stream" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTrailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/cardViewOnlineStream"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewReviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewTrailers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageViewFavorite"
        android:layout_gravity="top|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite_icon"
        android:onClick="onClickToggleFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favorite_off" />

</FrameLayout>